<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_button3"
        android:text="@string/GoBack"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:autofillHints="@string/Username"
        android:drawableStart="@drawable/ic_custom_username"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordTextView"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:autofillHints="@string/Password"
        android:drawableStart="@drawable/ic_custom_password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button3"
        android:text="@string/SignIn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_button3"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="cursive"
        android:text="@string/SignIn"
        android:textColor="#4A0000"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boredomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:text="@string/ImVeryBored"
        android:textColor="#4A0000"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>