<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrationFragment2">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="cursive"
        android:text="@string/Register"
        android:textColor="#4A0000"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boredomTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:text="@string/ImVeryBored"
        android:textColor="#4A0000"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView" />

    <EditText
        android:id="@+id/nameTextViewRegister"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:autofillHints="@string/Username"
        android:drawableStart="@drawable/ic_custom_username"
        android:hint="@string/Username"
        android:padding="15dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTextViewRegister"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:autofillHints="@string/Email"
        android:drawableStart="@drawable/ic_custom_email"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextViewRegister" />

    <EditText
        android:id="@+id/passTextViewRegister"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:autofillHints="@string/Password"
        android:drawableStart="@drawable/ic_custom_password"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextViewRegister" />

    <Button
        android:id="@+id/registerButton2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/custom_button3"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>