<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020"
    tools:context=".GameFragment">

    <Button
        android:id="@+id/accountBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button_game_finished"
        android:text="@string/Account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/leadersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTrialBtn" />

    <Button
        android:id="@+id/leadersBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button_game_finished"
        android:text="@string/LeaderBoards"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/homeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountBtn" />


    <Button
        android:id="@+id/homeBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button_game_finished"
        android:text="@string/LogOff"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/quitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leadersBtn" />

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/timeTrialBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button_game_finished"
        android:text="@string/TimeTrial"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/accountBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGameBtn" />

    <Button
        android:id="@+id/mainGameBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button_game_finished"
        android:text="@string/Play"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/timeTrialBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/quitBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button_game_finished"
        android:text="@string/Quit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>