<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8F8F8F"
    tools:context=".GameFragment">


    <TextView
        android:id="@+id/upgradeTexView12"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/upgradeTexView13"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upgradeTexView11"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/clickBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/custom_button_main_game"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/numberOfClicksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clickBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button_main_game"
        android:enabled="false"
        android:text="@string/Forty"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/upgrade2TextView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button_main_game"
        android:enabled="false"
        android:text="@string/Hundred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/upgradeTexView4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button_main_game"
        android:enabled="false"
        android:text="@string/Hundred"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/upgrade3TextView" />

    <Button
        android:id="@+id/button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_button_main_game"
        android:enabled="false"
        android:text="@string/Ten"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgrade1TextView" />

    <TextView
        android:id="@+id/upgradeTexView4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/Click"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upgrade3TextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upgrade3TextView"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/AutoClick0.5"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/upgradeTexView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upgrade2TextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upgrade2TextView"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/AutoClick2"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/upgrade3TextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upgrade1TextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upgrade1TextView"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:text="@string/AutoClick0.5"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/upgrade2TextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upgradeTexView10"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/upgradeTexView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/upgradeTexView11"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/upgradeTexView12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upgradeTexView10"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/upgradeTexView13"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/Zero"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upgradeTexView12"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/userTextViewMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Highest"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/userHighScoreTextView"
        app:layout_constraintTop_toBottomOf="@+id/clickBtn" />

    <TextView
        android:id="@+id/userHighScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>